plugins {
    id 'java'
    id 'application'
    id 'jvm-toolchains'
}

allprojects {
    group = 'org.pepsoft.worldpainter'
    version = '2.26.1-SNAPSHOT'

    repositories {
        mavenCentral()
        flatDir {
            dirs "${rootDir}/lib"
        }
    }
}

subprojects {
    apply plugin: 'java'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
        options.compilerArgs += ['-Xlint:deprecation', '-Xlint:unchecked']
    }

    test {
        useJUnitPlatform()
    }
}

project(':WorldPainter:WPCore') {
    dependencies {
        implementation name: 'Utils'
        implementation name: 'JNBT'
        implementation name: 'SwingUtils'
        implementation name: 'WPValueObjects'
        implementation name: 'vecmath'

        // ImageIO dependencies
        implementation name: 'imageio-tiff'
        implementation name: 'imageio-core'
        implementation name: 'imageio-metadata'
        implementation name: 'common-image'
        implementation name: 'common-io'
        implementation name: 'common-lang'

        implementation name: 'nashorn-core'
        implementation 'org.slf4j:slf4j-api:2.0.9'

        implementation 'com.google.guava:guava:33.0.0-jre'
        implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
        implementation 'com.fasterxml.jackson.core:jackson-core:2.16.1'
        implementation 'com.fasterxml.jackson.core:jackson-annotations:2.16.1'

        compileOnly 'org.jetbrains:annotations:24.0.1'

        compileOnly 'org.projectlombok:lombok:1.18.30'
        annotationProcessor 'org.projectlombok:lombok:1.18.30'

        testImplementation 'junit:junit:4.13.2'
        testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
        testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.10.1'
        testImplementation 'org.slf4j:slf4j-simple:2.0.9'
    }

    test {
        forkEvery = 1
    }

    processResources {
        filesMatching('**/*.properties') {
            expand(
                'project': [version: project.version],
                'timestamp': new Date().format('yyyyMMddHHmmss')
            )
        }
        filesMatching('**/*.plugins') {
            expand(
                'project': [version: project.version]
            )
        }
    }
}

project(':WorldPainter:WPDynmapPreviewer') {
    dependencies {
        implementation project(':WorldPainter:WPCore')

        // Needed dependencies for WPDynmapPreviewer
        implementation name: 'DynmapCore'
        implementation name: 'DynmapCoreAPI'

        // Transitive dependencies that might not be visible from WPCore because of 'implementation'
        implementation name: 'Utils'
        implementation name: 'SwingUtils'
        implementation 'com.google.guava:guava:33.0.0-jre'
        implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
        implementation name: 'vecmath'

        implementation 'org.yaml:snakeyaml:2.2'
        implementation('com.googlecode.json-simple:json-simple:1.1.1') {
            exclude group: 'junit', module: 'junit'
        }
        implementation 'org.slf4j:slf4j-api:2.0.9'
        implementation 'org.slf4j:jul-to-slf4j:2.0.9'
    }
}

project(':WorldPainter:WPGUI') {
    apply plugin: 'application'

    application {
        mainClass = 'org.pepsoft.worldpainter.Main'
        applicationName = 'WorldPainter'
        applicationDefaultJvmArgs = [
            '--add-exports=java.desktop/sun.swing=ALL-UNNAMED',
            '--add-exports=java.desktop/sun.awt.windows=ALL-UNNAMED',
            '--add-opens=java.desktop/javax.swing=ALL-UNNAMED',
            '--add-opens=java.desktop/sun.awt=ALL-UNNAMED',
            '-Djava.awt.headless=false'
        ]
    }

    dependencies {
        implementation project(':WorldPainter:WPCore')
        implementation project(':WorldPainter:WPDynmapPreviewer')

        implementation name: 'Utils'
        implementation name: 'SwingUtils'
        implementation name: 'JNBT'
        implementation name: 'WPValueObjects'
        implementation name: 'common-image'
        implementation name: 'jpen'
        implementation name: 'jide-common'
        implementation name: 'jide-dock'
        implementation name: 'laf-dark'
        implementation name: 'vecmath'

        // Nashorn needed for scripting tests in WPGUI
        implementation name: 'nashorn-core'
        implementation name: 'asm'
        implementation name: 'asm-util'
        implementation name: 'asm-tree'
        implementation name: 'asm-commons'
        implementation name: 'asm-analysis'


        implementation 'org.slf4j:slf4j-api:2.0.9'
        implementation 'ch.qos.logback:logback-classic:1.4.14'
        implementation 'org.slf4j:jcl-over-slf4j:2.0.9'
        implementation 'org.slf4j:jul-to-slf4j:2.0.9'
        runtimeOnly 'org.apache.logging.log4j:log4j-to-slf4j:2.21.1'

        implementation 'com.google.guava:guava:33.0.0-jre'
        implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'

        compileOnly 'org.jetbrains:annotations:24.0.1'

        testImplementation 'junit:junit:4.13.2'
        testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
        testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.10.1'
    }

    // Configure tests to fork every time to avoid singleton initialization issues
    test {
        forkEvery = 1
    }

    startScripts {
        doLast {
             windowsScript.text = windowsScript.text.replaceAll(
                'set CLASSPATH=.*',
                'set CLASSPATH=%APP_HOME%\\\\lib\\\\WPDynmapPreviewer-' + project.version + '.jar;%APP_HOME%\\\\lib\\\\*'
            )
             unixScript.text = unixScript.text.replaceAll(
                'CLASSPATH=.*',
                'CLASSPATH=\\$APP_HOME/lib/WPDynmapPreviewer-' + project.version + '.jar:\\$APP_HOME/lib/*'
            )
        }
    }

    distZip {
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    }

    distTar {
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    }

    processResources {
        filesMatching('**/*.plugins') {
            expand(
                'project': [version: project.version]
            )
        }
    }
}
